Fix T87324: incorrect parametric coordinates with light spread